unpackaged/main/default/objects/CaseHistory__c/CaseHistory__c.object-meta.xml
<CustomObject>
    <description>What: Used by Service Analytics v6+ Analytics App install. Do not remove.
Who: Rodrigo Mercader &amp; Analytics Team.</description>
    <label>CaseHistory__c</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>CaseHistory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CaseHistory__c</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>