unpackaged/main/default/objects/CaseHistory__c/fields/CaseId__c.field-meta.xml
<CustomField>
    <fullName>CaseId__c</fullName>
    <label>Case ID</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>CaseHistoryRelated</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>