unpackaged/main/default/objects/CaseHistory__c/fields/CreatedById__c.field-meta.xml
<CustomField>
    <fullName>CreatedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created By ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CaseHistoryRelated</relationshipName>
    <type>Lookup</type>
</CustomField>