unpackaged/main/default/objects/CaseHistory__c/fields/NewValue__c.field-meta.xml
<CustomField>
    <fullName>NewValue__c</fullName>
    <label>New Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>