unpackaged/main/default/objects/CaseHistory__c/fields/OldValue__c.field-meta.xml
<CustomField>
    <fullName>OldValue__c</fullName>
    <label>Old Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>